--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,14 +2,15 @@ site_name: CCPacks documentation
 
 nav: 
     - Home: index.md
-    - Blocks: blocks.md
-    - Items:
-      - Armor: item/armor.md
-      - Durable Item: item/durable.md
-      - Food: item/food.md
-      - General: item/general.md
-      - Tools: item/tools.md
-      - Weapons: item/weapons.md
+    - Custom Content:
+      - Blocks: blocks.md
+      - Items:
+        - Armor: item/armor.md
+        - Durable Item: item/durable.md
+        - Food: item/food.md
+        - General: item/general.md
+        - Tools: item/tools.md
+        - Weapons: item/weapons.md
 
 
 theme:
