Added CCPacks stuff

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,15 @@
 site_name: Origins Documentation
 nav:
     - Home: index.md
+    - Custom Content:
+      - Blocks: blocks.md
+      - Items:
+        - Armor: item/armor.md
+        - Durable Item: item/durable.md
+        - Food: item/food.md
+        - General: item/general.md
+        - Tools: item/tools.md
+        - Weapons: item/weapons.md
     - Datapack Guides:
         - Defining an Origin: guides/data/define_origin.md
         - Defining a Power: guides/data/define_power.md
