--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: CCPacks Documentation
 nav:
     - Home: index.md
+    - Data Types: data_types.md
     - Custom Content:
       - Blocks: blocks.md
       - Items:
