--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,42 @@ nav:
         - Enchantments: enchantment.md
         - Portal: portal.md
         - Keybind: keybind.md
+        - Apoli:
+            - Home: index.md
+            - Datapack Guides:
+                - Defining an Origin: guides/data/define_origin.md
+                - Defining a Power: guides/data/define_power.md
+                - Origin conditions in layers: guides/data/origin_conditions_in_layers.md
+            - Add-on Guides:
+                - Workspace Setup: guides/addon/workspace_setup.md
+                - Dependencies Explained: guides/addon/dependencies.md
+            - Types:
+                - Power Types: power_types.md
+                - Data Types: data_types.md
+                - Power JSON: power_json.md
+                - Origin JSON: origin_json.md
+                - Layer JSON: layer_json.md
+            - Conditions:
+                - Biome Conditions: biome_conditions.md
+                - Block Conditions: block_conditions.md
+                - Damage Conditions: damage_conditions.md
+                - Entity Conditions: entity_conditions.md
+                - Fluid Conditions: fluid_conditions.md
+                - Item Conditions: item_conditions.md
+                - Meta Conditions: meta_conditions.md
+            - Actions:
+                - Block Actions: block_actions.md
+                - Entity Actions: entity_actions.md
+                - Item Actions: item_actions.md
+                - Meta Actions: meta_actions.md
+            - Miscellaneous:
+                - Commands: misc/commands.md
+                - Keybindings: misc/keybindings.md
+                - Origins: misc/origins.md
+                - Positioned Item Stack Slots: misc/positioned_item_stack_slots.md
+                - Powers: misc/origins_powers.md
+                - Resource Bars: misc/resource_bars.md
+                - Vanilla Damage Sources: misc/vanilla_damage_sources.md
     - Actions:
         - Item Actions:
             - Remove Durability: item_actions/remove_durability.md
