added pack installation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: CCPacks Documentation
 
 nav:
     - Home: index.md
+    - Pack Installation: pack_installation.md
     - Pack Structure: pack_structure.md
     - CCPacks:
         - Custom Content:
